test/reassignDependentTypeParameter.hql
def main(){
	n := 4;
	x := 0: int[n];
	n += 2; // error
}
